--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -288,6 +288,7 @@ gui.config.fengshui.settings = Ustawienia
 gui.config.fengshui.title = Konfiguracja FengShui
 gui.config.fengshui.user = Użytkownik:
 gui.config.general.browser = Przeglądarka WWW
+gui.config.general.changelog.auto = Otwórz historię zmian po aktualizacji.
 gui.config.general.clipboardobserver = Obserwuj zawsze Schowek
 gui.config.general.createsubfolders = Utwórz podfoldery uwzgledniając nazwy pakietów (jeśli to możliwe)
 gui.config.general.downloaddirectory = Folder pobierania
@@ -1333,7 +1334,6 @@ plugins.host.fastload.browsererror = Nie udało się otworzyć linku w przegląd
 plugins.host.fastload.errors = Uruchamianie przeglądarki jest nieprawidłowo skonfigurowane
 plugins.host.fastload.getticketmsg = Zdobądź bilet do Fast-load!
 plugins.host.fastload.info = Pierwszy raz próbujesz pobrać z fast-load.net.\r\nTa wtyczka ma pewien dodatek: Aby zacząć pobieranie, trzeba wpisać kod Captcha w przeglądarce.\r\nJD otworzy teraz odpowiednią stronę WWW.
-
 plugins.host.fastload.overload.long = Przeciążenie Fast-load.net! Pobieranie z pełną prędkością możliwe tylko przez przeglądarkę!
 plugins.host.fastload.overload.short = Przeciążenie Fast-load.net
 plugins.host.fastload.prepare = Zaczekaj na potwierdzenie linku
@@ -1518,12 +1518,15 @@ plugins.optional.jdunrar.config.passwordlist.import.message = Czy napewno chcesz
 plugins.optional.jdunrar.config.passwordlist2 = Lista wszystkich haseł. Każda linia to osobne hasło. Dostępne hasła: %s
 plugins.optional.jdunrar.config.passwordtab = Lista haseł
 plugins.optional.jdunrar.crcerrorin = Wypakowywanie: Nie powiodło się (CRC w %s)
+plugins.optional.jdunrar.error.extrfailedcrc = Wypakowywanie: Nie powiodło się (CRC w nieznanym pliku)
 plugins.optional.jdunrar.filefilter = Woluminy startowe RAR
 plugins.optional.jdunrar.filefilter.extractto = Katalog docelowy
+plugins.optional.jdunrar.linkmenu.autoextract = Automatyczne wypakowywanie
 plugins.optional.jdunrar.linkmenu.container = JDUnrar
 plugins.optional.jdunrar.linkmenu.extract = Wypakuj
 plugins.optional.jdunrar.linkmenu.openextract = Otwórz folder
 plugins.optional.jdunrar.linkmenu.openextract2 = Otwórz folder (%s)
+plugins.optional.jdunrar.linkmenu.package.autoextract = Automatyczne wypakowywanie
 plugins.optional.jdunrar.linkmenu.package.extract = Wypakuj pakiet
 plugins.optional.jdunrar.linkmenu.setextract = Ustal miejsce docelowe
 plugins.optional.jdunrar.menu.config = Ustawienia
@@ -1534,8 +1537,17 @@ plugins.optional.jdunrar.menu.queue.clear = Wyczyść kolejkę
 plugins.optional.jdunrar.menu.queue.extract = Wypakuj %s
 plugins.optional.jdunrar.menu.queue.start = Uruchom kolejkę
 plugins.optional.jdunrar.menu.toggle = Aktywuj
+plugins.optional.jdunrar.messages = Ścieżka %s nie istnieje.
 plugins.optional.jdunrar.name = JD-Unrar
 plugins.optional.jdunrar.progress.extractfile = Wypakuj %s
+plugins.optional.jdunrar.status.crackingpass = Łamanie hasła
+plugins.optional.jdunrar.status.extractfailed = Wypakowywanie nie powiodło się
+plugins.optional.jdunrar.status.extractfailedcrc = Wypakowywanie nie powiodło się (błąd sumy kontrolnej)
+plugins.optional.jdunrar.status.extractfailedpass = Wypakowywanie nie powiodło się (problem z hasłemj)
+plugins.optional.jdunrar.status.extracting = Wypakowywanie
+plugins.optional.jdunrar.status.extractok = Wypakowano OK
+plugins.optional.jdunrar.status.openingarchive = Otwieranie archiwum
+plugins.optional.jdunrar.status.passfound = Odnaleziono hasło
 plugins.optional.langfileeditor.addkey = Dodaj klucz
 plugins.optional.langfileeditor.adoptdefaults = Adoptuj domyślne
 plugins.optional.langfileeditor.adoptdefaults.missing = Adoptuj domyślne dla brakujących wpisów
