--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -173,6 +173,7 @@ gui.config.fengshui.rdmanual = Manual
 gui.config.fengshui.rdname = Router detection
 gui.config.fengshui.settings = Settings
 gui.config.fengshui.title = Feng Shui Config
+gui.config.general.changelog.auto = Open Changelog after update
 gui.config.general.createsubfolders = Create sub-folder including package name (if possible)
 gui.config.general.downloaddirectory = Download directory
 gui.config.general.filelogger = Create logfile in ./logs/ directory
@@ -214,7 +215,7 @@ gui.config.jac.column.use = Use
 gui.config.jac.status.auto = Automatic detection
 gui.config.jac.status.noauto = Manual control
 gui.config.jdrr.close = Close
-gui.config.jdrr.infolable = 	 <span color=\"#4682B4\"> Check the IP address of the router and press the Start <br> W browser window with the home page of the router opens <br> Reconnect after you hit to stop and save. <br> More information is available </ span> <a href=\"http://jdownloader.org/knowledge/wiki/reconnect/reconnect-recorder\"> here </ a>
+gui.config.jdrr.infolable = <span color=\"#4682B4\"> Check the IP address of the router and press the Start <br> W browser window with the home page of the router opens <br> Reconnect after you hit to stop and save. <br> More information is available </ span> <a href=\"http://jdownloader.org/knowledge/wiki/reconnect/reconnect-recorder\"> here </ a>
 gui.config.jdrr.popup.title = JDRRPopup
 gui.config.jdrr.reconnectfaild = Reconnect failed
 gui.config.jdrr.savereconnect = Reconnect was successfull. Save now?
@@ -250,6 +251,7 @@ gui.config.packagemanager.column_name = Package
 gui.config.packagemanager.column_select = Select
 gui.config.packagemanager.reset = Reset versions
 gui.config.packagemanager.supportjd = Support JD by downloading pumped-up-addons
+gui.config.packagemanager.supportjd.instanthelp = http://www.jdownloader.org/knowledge/wiki/addons/install-and-update
 gui.config.packagemanager.table.info = Info
 gui.config.plugin.abg_confirm = I had read the AGB/TOS/FAQ of %s and accepted them!
 gui.config.plugin.decrypt.btn_load = Load Plugin
@@ -823,7 +825,6 @@ plugins.host.enterlinkpassword = Please enter Linkpassword
 plugins.host.fastload.browsererror = Could not open the Link in Browser
 plugins.host.fastload.errors = Browserlauncher missconfigured
 plugins.host.fastload.info = You try to download for the very first time from fast-load.net.\r\nThis plugin has some specials: To download you have to enter a captcha in browser.\r\nJD will now open an info URL
-
 plugins.host.fastload.prepare = Wait for linkconfirmation
 plugins.host.meinupload.serverdefect = Service not available
 plugins.host.premium.info.cash = Cash
@@ -853,6 +854,8 @@ plugins.hoster.passquestion = Link '%s' is passwordprotected. Enter password:
 plugins.hoster.premium.status_ok = Account is ok
 plugins.hoster.premiumtab = Premium settings
 plugins.hoster.rapidshare.com.increasetickettime = Increase ticket time (0%-500%)
+plugins.hoster.rapidshare.com.info.title = Account info for %s
+plugins.hoster.rapidshare.com.loadinfo = Load Rapidshare.com account information:
 plugins.hoster.rapidshare.com.prefferedserver = Preferred server (*1)
 plugins.hoster.rapidshare.com.prefferedserver.random = Random
 plugins.hoster.rapidshare.com.preselection = Accept pre-selection (*2)
@@ -931,12 +934,15 @@ plugins.optional.jdunrar.askforpassword = Password for %s?
 plugins.optional.jdunrar.config.advanced = Advanced settings
 plugins.optional.jdunrar.config.passwordlist2 = List of all passwords. Each line one password. Available passwords: %s
 plugins.optional.jdunrar.config.passwordtab = List of passwords
-plugins.optional.jdunrar.crcerrorin = Extract: failed(CRC in %s)
+plugins.optional.jdunrar.crcerrorin = Extract: failed (CRC in %s)
+plugins.optional.jdunrar.error.extrfailedcrc = Extract: failed (CRC in unknown file)
 plugins.optional.jdunrar.filefilter = Rar-Startvolumes
 plugins.optional.jdunrar.filefilter.extractto = Extract Directory
+plugins.optional.jdunrar.linkmenu.autoextract = Autoextract
 plugins.optional.jdunrar.linkmenu.container = JDUnrar
 plugins.optional.jdunrar.linkmenu.extract = Extract
 plugins.optional.jdunrar.linkmenu.openextract2 = Open directory (%s)
+plugins.optional.jdunrar.linkmenu.package.autoextract = Autoextract
 plugins.optional.jdunrar.linkmenu.package.extract = Extract package
 plugins.optional.jdunrar.linkmenu.setextract = Set Extract to...
 plugins.optional.jdunrar.menu.config = Settings
@@ -947,8 +953,17 @@ plugins.optional.jdunrar.menu.queue.clear = Clear queue
 plugins.optional.jdunrar.menu.queue.extract = Extract %s
 plugins.optional.jdunrar.menu.queue.start = Start queue
 plugins.optional.jdunrar.menu.toggle = Activate
+plugins.optional.jdunrar.messages = The path %s does not exist.
 plugins.optional.jdunrar.name = JD-Unrar
 plugins.optional.jdunrar.progress.extractfile = Extract %s
+plugins.optional.jdunrar.status.crackingpass = Cracking password
+plugins.optional.jdunrar.status.extractfailed = Extract failed
+plugins.optional.jdunrar.status.extractfailedcrc = Extract failed (CRC error)
+plugins.optional.jdunrar.status.extractfailedpass = Extract failed (password)
+plugins.optional.jdunrar.status.extracting = Extracting
+plugins.optional.jdunrar.status.extractok = Extract OK
+plugins.optional.jdunrar.status.openingarchive = Opening archive
+plugins.optional.jdunrar.status.passfound = Password found
 plugins.optional.langfileeditor.adoptdefaults = Adopt Default(s)
 plugins.optional.langfileeditor.adoptdefaults.missing = Adopt Defaults of Missing Entries
 plugins.optional.langfileeditor.changed.message = Language File changed! Save changes?
@@ -1133,9 +1148,9 @@ sys.warning.linklist.incompatible = Link list incompatible. Saving rejected.
 sys.warning.newmessage = New Systemmessage
 system.dialogs.update = Updates available
 system.dialogs.update.message = <font size="2" face="Verdana, Arial, Helvetica, sans-serif">%s update(s)  and %s package(s) or addon(s) available. Install now?</font>
-system.download.docrc2 = CRC-Check running(%s)
-system.download.docrc2.failed = CRC-Check FAILED(%s)
-system.download.docrc2.success = CRC-Check OK(%s)
+system.download.docrc2 = CRC-Check running (%s)
+system.download.docrc2.failed = CRC-Check FAILED (%s)
+system.download.docrc2.success = CRC-Check OK (%s)
 system.download.errors.couldnotoverwrite = Could not overwrite existing file
 system.download.errors.couldnotoverwritejdu = Update Download Error
 system.download.errors.couldnotrename = Could not rename partfile
