--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -958,6 +958,7 @@ gui.splash.text.loadplugins = Wczytywanie wtyczek...
 gui.splash.text.update = Wyszukiwanie aktualizacji...
 gui.splash.text.webupdate = Sprawdzanie aktualizacji...
 gui.status.timeoutdetected = Czas upłynął
+gui.statusbar.interaction = Teraz trwa:
 gui.statusbar.premium = Konto Premium
 gui.statusbar.sim_ownloads = Pobieraj maks.
 gui.statusbar.speed = Prędkość
@@ -1016,6 +1017,7 @@ gui.textcomponent.context.paste = Wklej
 gui.textcomponent.context.paste.acc = ctrl V
 gui.textcomponent.context.selectall = Zaznacz wszystkie
 gui.textcomponent.context.selectall.acc = ctrl A
+gui.titleaddaction = Teraz trwa:
 gui.tooltip.plugin_decrypt = Rozszyfrowywanie wtyczek
 gui.tooltip.plugin_host = Hostuj wtyczki
 gui.tooltip.statusbar.premium = Wł/Wył Pobierania Premium
