--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -575,6 +575,7 @@ gui.splash.text.loadgui = Loading Interface
 gui.splash.text.loadlanguage = Loading languages
 gui.splash.text.loadplugins = Loading  Plugins
 gui.splash.text.webupdate = Check Updates
+gui.statusbar.interaction = Interaction:
 gui.statusbar.premium = Premium
 gui.statusbar.sim_ownloads = Max.Dls.
 gui.statusbar.speed = Speed
@@ -614,6 +615,7 @@ gui.textcomponent.context.paste = Paste
 gui.textcomponent.context.paste.acc = ctrl V
 gui.textcomponent.context.selectall = Select all
 gui.textcomponent.context.selectall.acc = ctrl A
+gui.titleaddaction = Action: 
 gui.tooltip.statusbar.premium = On/Off of the Premiumdownloads
 gui.tooltip.statusbar.simultan_downloads = Max. simultan downloads
 gui.tooltip.statusbar.speedlimiter = Speed limitation(kb/s) [0:infinite]
