--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -173,7 +173,7 @@ gui.config.general.filelogger = Erstelle Logdatei im ./logs/ Ordner
 gui.config.general.loggerlevel = Level für's Logging
 gui.config.general.name = Allgemein
 gui.config.general.todowithdownloads = Entferne fertig gestellte Downloads ...
-gui.config.general.todowithdownloads.atstart = beim Programstart
+gui.config.general.todowithdownloads.atstart = beim Programmstart
 gui.config.general.todowithdownloads.immediate = sofort
 gui.config.general.todowithdownloads.never = nicht
 gui.config.general.todowithdownloads.packageready = wenn Paket komplett ist 
