--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -933,6 +933,7 @@ gui.menu.remove = Usuń
 gui.messages.outofmemoryerror = Wystąpił błąd!\r\nJDownloaderowi brakuje pamięci. Zalecane jest ponowne uruchomienie komputera.\r\nProsimy o zgłoszenie tego błędu!
 gui.packageinfo.comment = Komentarz
 gui.packageinfo.dldirectory = Folder pobierania
+gui.packageinfo.extractafter = Automatyczne wypakowywanie
 gui.packageinfo.links = Linki
 gui.packageinfo.loaded = Pobrane
 gui.packageinfo.name = Nazwa
@@ -997,6 +998,7 @@ gui.table.contextmenu.packageinfo = Szczegóły
 gui.table.contextmenu.packagesort = Sortuj pakiety
 gui.table.contextmenu.packagesubmenu = Pakiety
 gui.table.contextmenu.pluginsubmenu = Wtyczka
+gui.table.contextmenu.priority = Priorytet
 gui.table.contextmenu.reset = Restart
 gui.table.contextmenu.resetpackage = Restart
 gui.table.contextmenu.resume = Wznów
