--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -732,13 +732,14 @@ gui.linkinfo.available.notchecked = nie sprawdzony
 gui.linkinfo.available.ok = Jest
 gui.linkinfo.comment = Komentarz
 gui.linkinfo.dateigröße = Rozmiar pliku
-gui.linkinfo.download = Pobieranie
+gui.linkinfo.download = Element
 gui.linkinfo.download.activated = jest aktywny
 gui.linkinfo.download.chunks.label = części
 gui.linkinfo.download.deactivated = jest nieaktywny
 gui.linkinfo.download.notunderway = nie jest przetwarzany
 gui.linkinfo.download.status = Stan pobierania
 gui.linkinfo.download.underway = jest przetwarzany
+gui.linkinfo.downloadstatus = Stan
 gui.linkinfo.file = Plik
 gui.linkinfo.filesize = Rozmiar 
 gui.linkinfo.geschwindigkeit = Prędkość
