--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -750,6 +750,7 @@ gui.linkinfo.packet = Pakiet
 gui.linkinfo.password = Hasło
 gui.linkinfo.passwort = Hasło
 gui.linkinfo.plugin status = Stan wtyczki
+gui.linkinfo.pwdl = Hasło do elementu
 gui.linkinfo.rate = Odświeżanie
 gui.linkinfo.save to = Zapisz do
 gui.linkinfo.saveto = Zapisz do
@@ -763,6 +764,7 @@ gui.linkinformation.title = Informacje o linku:
 gui.linklist.editpackagename.message = Nowa nazwa dla pakietu
 gui.linklist.newpackage.message = Nazwa nowego pakietu
 gui.linklist.newpackage.title = Przygotowywanie nowego pakietu
+gui.linklist.setpw.message = Ustaw hasło do elementu
 gui.linklist.status.doresume = Oczekiwanie na wznowienie
 gui.logdialog.btn_censor = Dziennik cenzury
 gui.logdialog.btn_save = Zapisz
@@ -1005,6 +1007,7 @@ gui.table.contextmenu.priority = Priorytet
 gui.table.contextmenu.reset = Restart
 gui.table.contextmenu.resetpackage = Restart
 gui.table.contextmenu.resume = Wznów
+gui.table.contextmenu.setdlpw = Ustaw hasło do elementu
 gui.table.draganddrop.after = Porzuć po '%s'
 gui.table.draganddrop.before = Porzuć po '%s'
 gui.table.draganddrop.cancel = Anuluj
